--- a/MoYeoRunToy/MoYeoRunToy/StoryBoard/Base.lproj/Main.storyboard
+++ b/MoYeoRunToy/MoYeoRunToy/StoryBoard/Base.lproj/Main.storyboard
@@ -31,22 +31,22 @@
         <!--러닝-->
         <scene sceneID="2Gb-hI-vJe">
             <objects>
-                <viewController id="UES-ZJ-kHg" sceneMemberID="viewController">
+                <viewController id="UES-ZJ-kHg" customClass="RunViewController" customModule="MoYeoRunToy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mGA-YJ-c4a">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="146" translatesAutoresizingMaskIntoConstraints="NO" id="SGL-Hf-gb9">
-                                <rect key="frame" x="44" y="216" width="318" height="38"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="146" translatesAutoresizingMaskIntoConstraints="NO" id="SGL-Hf-gb9">
+                                <rect key="frame" x="20.5" y="137" width="383.5" height="38"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="지금 인기있는 러닝" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJo-nn-sUf">
-                                        <rect key="frame" x="0.0" y="0.0" width="134" height="38"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="199.5" height="38"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b7J-S2-ZLp">
-                                        <rect key="frame" x="280" y="0.0" width="38" height="38"/>
+                                        <rect key="frame" x="345.5" y="0.0" width="38" height="38"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="b7J-S2-ZLp" secondAttribute="height" id="9Ze-br-u3a"/>
                                         </constraints>
@@ -58,35 +58,48 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="312" translatesAutoresizingMaskIntoConstraints="NO" id="NTb-6j-4PY">
-                                <rect key="frame" x="20" y="44" width="374" height="31"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 273.png" translatesAutoresizingMaskIntoConstraints="NO" id="vod-4T-VLZ">
-                                        <rect key="frame" x="0.0" y="0.0" width="31" height="31"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="vod-4T-VLZ" secondAttribute="height" id="qvJ-gu-45i"/>
-                                        </constraints>
-                                    </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="ggx-Cv-afL">
-                                        <rect key="frame" x="343" y="0.0" width="31" height="31"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="ggx-Cv-afL" secondAttribute="height" id="IRN-gm-Yc3"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
-                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 273.png" translatesAutoresizingMaskIntoConstraints="NO" id="vod-4T-VLZ">
+                                <rect key="frame" x="20.5" y="54" width="29" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="vod-4T-VLZ" secondAttribute="height" id="qvJ-gu-45i"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="ggx-Cv-afL">
+                                <rect key="frame" x="360" y="54" width="33.5" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ggx-Cv-afL" secondAttribute="height" id="IRN-gm-Yc3"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Palvin님, 즐거운 러닝 되세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cek-yA-CA5">
+                                <rect key="frame" x="20.5" y="98" width="383.5" height="29"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="xbJ-nL-n7g"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="NTb-6j-4PY" firstAttribute="leading" secondItem="xbJ-nL-n7g" secondAttribute="leading" constant="20" id="4ZI-uw-fzL"/>
-                            <constraint firstItem="NTb-6j-4PY" firstAttribute="top" secondItem="xbJ-nL-n7g" secondAttribute="top" id="6Fu-nF-rYE"/>
-                            <constraint firstItem="xbJ-nL-n7g" firstAttribute="trailing" secondItem="NTb-6j-4PY" secondAttribute="trailing" constant="20" id="CZc-Nc-zUz"/>
+                            <constraint firstItem="SGL-Hf-gb9" firstAttribute="top" secondItem="Cek-yA-CA5" secondAttribute="bottom" constant="10" id="2uL-Q3-bcW"/>
+                            <constraint firstItem="vod-4T-VLZ" firstAttribute="top" secondItem="xbJ-nL-n7g" secondAttribute="top" constant="10" id="6GB-YS-KK4"/>
+                            <constraint firstItem="xbJ-nL-n7g" firstAttribute="trailing" secondItem="Cek-yA-CA5" secondAttribute="trailing" constant="10" id="BXX-6r-vdb"/>
+                            <constraint firstItem="Cek-yA-CA5" firstAttribute="leading" secondItem="xbJ-nL-n7g" secondAttribute="centerX" multiplier="0.1" id="BhT-cb-Au5"/>
+                            <constraint firstItem="xbJ-nL-n7g" firstAttribute="trailing" secondItem="SGL-Hf-gb9" secondAttribute="trailing" constant="10" id="NgG-i7-NBo"/>
+                            <constraint firstItem="Cek-yA-CA5" firstAttribute="top" secondItem="vod-4T-VLZ" secondAttribute="bottom" constant="15" id="TvF-E6-WJY"/>
+                            <constraint firstItem="ggx-Cv-afL" firstAttribute="trailing" secondItem="xbJ-nL-n7g" secondAttribute="centerX" multiplier="1.9" id="X6M-9J-jEa"/>
+                            <constraint firstItem="ggx-Cv-afL" firstAttribute="width" secondItem="mGA-YJ-c4a" secondAttribute="width" multiplier="0.08" id="ZZ2-wO-ovz"/>
+                            <constraint firstItem="vod-4T-VLZ" firstAttribute="width" secondItem="mGA-YJ-c4a" secondAttribute="width" multiplier="0.07" id="e1D-Q0-Vam"/>
+                            <constraint firstItem="vod-4T-VLZ" firstAttribute="leading" secondItem="xbJ-nL-n7g" secondAttribute="centerX" multiplier="0.1" id="oLF-XV-i9Q"/>
+                            <constraint firstItem="ggx-Cv-afL" firstAttribute="top" secondItem="xbJ-nL-n7g" secondAttribute="top" constant="10" id="q7o-8r-Qbi"/>
+                            <constraint firstItem="SGL-Hf-gb9" firstAttribute="leading" secondItem="xbJ-nL-n7g" secondAttribute="centerX" multiplier="0.1" id="qBE-Gf-BZB"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="러닝" id="ABW-Jf-edJ">
                         <imageReference key="image" image="lungs" catalog="system" symbolScale="medium"/>
                     </tabBarItem>
+                    <connections>
+                        <outlet property="profielImageView" destination="ggx-Cv-afL" id="5XZ-pR-RhM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iCg-wo-xnf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
