--- a/MoYeoRunToy/MoYeoRunToy/StoryBoard/Base.lproj/Main.storyboard
+++ b/MoYeoRunToy/MoYeoRunToy/StoryBoard/Base.lproj/Main.storyboard
@@ -89,7 +89,7 @@
                                                 </connections>
                                             </containerView>
                                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rth-sP-L3h">
-                                                <rect key="frame" x="0.0" y="897" width="414" height="410.5"/>
+                                                <rect key="frame" x="0.0" y="897" width="414" height="400"/>
                                                 <connections>
                                                     <segue destination="Njg-5Y-PC1" kind="embed" id="ah1-QL-pkk"/>
                                                 </connections>
@@ -120,7 +120,7 @@
                                             <constraint firstItem="vod-4T-VLZ" firstAttribute="leading" secondItem="WFZ-UK-7fh" secondAttribute="leading" constant="15" id="n0n-v4-CbD"/>
                                             <constraint firstAttribute="trailing" secondItem="2Qb-A7-5Q6" secondAttribute="trailing" id="r3d-fS-jxZ"/>
                                             <constraint firstItem="Cek-yA-CA5" firstAttribute="top" secondItem="vod-4T-VLZ" secondAttribute="bottom" constant="10" id="rzf-rQ-wq3"/>
-                                            <constraint firstAttribute="bottom" secondItem="rth-sP-L3h" secondAttribute="bottom" id="ti4-WE-fs3"/>
+                                            <constraint firstAttribute="bottom" secondItem="rth-sP-L3h" secondAttribute="bottom" constant="10" id="ti4-WE-fs3"/>
                                             <constraint firstItem="ggx-Cv-afL" firstAttribute="width" secondItem="WFZ-UK-7fh" secondAttribute="width" multiplier="0.08" id="x0G-un-Bgh"/>
                                             <constraint firstItem="rth-sP-L3h" firstAttribute="leading" secondItem="WFZ-UK-7fh" secondAttribute="leading" id="yoA-GP-2Aa"/>
                                             <constraint firstItem="iqe-GQ-m6y" firstAttribute="top" secondItem="2Qb-A7-5Q6" secondAttribute="bottom" id="znC-8F-RdL"/>
@@ -437,7 +437,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="새로운 미션" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eOq-qQ-elo">
-                                <rect key="frame" x="15" y="0.0" width="109" height="29"/>
+                                <rect key="frame" x="15" y="20" width="109" height="29"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -449,25 +449,25 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="전체 보기 &gt;"/>
                             </button>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="W74-5x-ZmY">
-                                <rect key="frame" x="0.0" y="29" width="414" height="478"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="W74-5x-ZmY">
+                                <rect key="frame" x="15" y="59" width="384" height="438"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ZvF-Mx-BzF">
-                                    <size key="itemSize" width="162" height="150"/>
+                                    <size key="itemSize" width="178" height="192"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RunViewController_NewMission_CollectionView_Cell" id="cEt-2m-5f0" customClass="RunViewController_NewMission_CollectionView_Cell" customModule="MoYeoRunToy" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="162" height="150"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="178" height="192"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Dwb-Kq-pWD">
-                                            <rect key="frame" x="0.0" y="0.0" width="162" height="150"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="178" height="192"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="E59-fk-RSt">
-                                                    <rect key="frame" x="0.0" y="0.0" width="162" height="150"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="178" height="192"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
@@ -477,7 +477,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="E59-fk-RSt" secondAttribute="trailing" id="Xuw-YR-LBo"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="162" height="150"/>
+                                        <size key="customSize" width="178" height="192"/>
                                         <connections>
                                             <outlet property="imageView" destination="E59-fk-RSt" id="gIK-Lj-AbL"/>
                                         </connections>
@@ -491,38 +491,38 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="W74-5x-ZmY" firstAttribute="bottom" secondItem="bvN-Wc-ZJ2" secondAttribute="top" id="1SO-YF-P0E"/>
+                            <constraint firstItem="W74-5x-ZmY" firstAttribute="bottom" secondItem="bvN-Wc-ZJ2" secondAttribute="top" constant="-10" id="1SO-YF-P0E"/>
                             <constraint firstItem="eOq-qQ-elo" firstAttribute="leading" secondItem="LHO-Pr-uwk" secondAttribute="leading" constant="15" id="4G7-jw-4IT"/>
-                            <constraint firstItem="W74-5x-ZmY" firstAttribute="top" secondItem="eOq-qQ-elo" secondAttribute="bottom" id="8fs-5e-vXw"/>
+                            <constraint firstItem="W74-5x-ZmY" firstAttribute="top" secondItem="eOq-qQ-elo" secondAttribute="bottom" constant="10" id="8fs-5e-vXw"/>
                             <constraint firstItem="bvN-Wc-ZJ2" firstAttribute="leading" secondItem="LHO-Pr-uwk" secondAttribute="leading" constant="15" id="Ah6-d2-tOa"/>
-                            <constraint firstItem="eOq-qQ-elo" firstAttribute="top" secondItem="LHO-Pr-uwk" secondAttribute="top" id="VUr-K5-Hz7"/>
+                            <constraint firstItem="eOq-qQ-elo" firstAttribute="top" secondItem="LHO-Pr-uwk" secondAttribute="top" constant="20" id="VUr-K5-Hz7"/>
                             <constraint firstAttribute="bottom" secondItem="bvN-Wc-ZJ2" secondAttribute="bottom" id="XuT-Ox-hb6"/>
-                            <constraint firstAttribute="trailing" secondItem="W74-5x-ZmY" secondAttribute="trailing" id="oLs-8V-nuB"/>
-                            <constraint firstItem="W74-5x-ZmY" firstAttribute="leading" secondItem="LHO-Pr-uwk" secondAttribute="leading" id="onq-J6-bA3"/>
+                            <constraint firstAttribute="trailing" secondItem="W74-5x-ZmY" secondAttribute="trailing" constant="15" id="oLs-8V-nuB"/>
+                            <constraint firstItem="W74-5x-ZmY" firstAttribute="leading" secondItem="LHO-Pr-uwk" secondAttribute="leading" constant="15" id="onq-J6-bA3"/>
                             <constraint firstAttribute="trailing" secondItem="bvN-Wc-ZJ2" secondAttribute="trailing" constant="15" id="vhY-HL-Jd6"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FBQ-4q-Ce8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="699" y="1049"/>
+            <point key="canvasLocation" x="698.55072463768124" y="1048.6607142857142"/>
         </scene>
         <!--Run View Controller Last Record-->
         <scene sceneID="QTF-84-Yo3">
             <objects>
                 <viewController id="Njg-5Y-PC1" customClass="RunViewController_LastRecord" customModule="MoYeoRunToy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="h3F-P0-rHu">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="410.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="400"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="지난 기록" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hN0-uF-XdE">
-                                <rect key="frame" x="15" y="0.0" width="89" height="29"/>
+                                <rect key="frame" x="15" y="20" width="89" height="29"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Jdx-y9-DCb">
-                                <rect key="frame" x="0.0" y="29" width="414" height="350.5"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Jdx-y9-DCb">
+                                <rect key="frame" x="15" y="59" width="384" height="300"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="22n-dE-TKa">
                                     <size key="itemSize" width="355" height="106"/>
@@ -532,7 +532,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RunViewController_LastRecord_CollectionView_Cell" id="913-FL-l8w" customClass="RunViewController_LastRecord_CollectionView_Cell" customModule="MoYeoRunToy" customModuleProvider="target">
-                                        <rect key="frame" x="29.5" y="0.0" width="355" height="106"/>
+                                        <rect key="frame" x="14.5" y="0.0" width="355" height="106"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="C7X-x8-CAE">
                                             <rect key="frame" x="0.0" y="0.0" width="355" height="106"/>
@@ -561,7 +561,7 @@
                                 </connections>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kSS-n0-YSo">
-                                <rect key="frame" x="15" y="379.5" width="384" height="31"/>
+                                <rect key="frame" x="15" y="369" width="384" height="31"/>
                                 <color key="backgroundColor" systemColor="systemGray3Color"/>
                                 <color key="tintColor" systemColor="systemGrayColor"/>
                                 <state key="normal" title="Button"/>
@@ -572,13 +572,13 @@
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="kSS-n0-YSo" secondAttribute="bottom" id="AOU-6V-QrI"/>
                             <constraint firstItem="hN0-uF-XdE" firstAttribute="leading" secondItem="h3F-P0-rHu" secondAttribute="leading" constant="15" id="Glh-YF-47W"/>
-                            <constraint firstItem="Jdx-y9-DCb" firstAttribute="leading" secondItem="h3F-P0-rHu" secondAttribute="leading" id="Kib-bb-Xl5"/>
+                            <constraint firstItem="Jdx-y9-DCb" firstAttribute="leading" secondItem="h3F-P0-rHu" secondAttribute="leading" constant="15" id="Kib-bb-Xl5"/>
                             <constraint firstItem="kSS-n0-YSo" firstAttribute="leading" secondItem="h3F-P0-rHu" secondAttribute="leading" constant="15" id="OKx-Wd-Txx"/>
-                            <constraint firstItem="kSS-n0-YSo" firstAttribute="top" secondItem="Jdx-y9-DCb" secondAttribute="bottom" id="XaC-GY-WW1"/>
-                            <constraint firstAttribute="trailing" secondItem="Jdx-y9-DCb" secondAttribute="trailing" id="aiC-31-ZJa"/>
+                            <constraint firstItem="kSS-n0-YSo" firstAttribute="top" secondItem="Jdx-y9-DCb" secondAttribute="bottom" constant="10" id="XaC-GY-WW1"/>
+                            <constraint firstAttribute="trailing" secondItem="Jdx-y9-DCb" secondAttribute="trailing" constant="15" id="aiC-31-ZJa"/>
                             <constraint firstAttribute="trailing" secondItem="kSS-n0-YSo" secondAttribute="trailing" constant="15" id="dcZ-v9-hhg"/>
-                            <constraint firstItem="Jdx-y9-DCb" firstAttribute="top" secondItem="hN0-uF-XdE" secondAttribute="bottom" id="hrI-FA-H48"/>
-                            <constraint firstItem="hN0-uF-XdE" firstAttribute="top" secondItem="h3F-P0-rHu" secondAttribute="top" id="siU-sX-OpW"/>
+                            <constraint firstItem="Jdx-y9-DCb" firstAttribute="top" secondItem="hN0-uF-XdE" secondAttribute="bottom" constant="10" id="hrI-FA-H48"/>
+                            <constraint firstItem="hN0-uF-XdE" firstAttribute="top" secondItem="h3F-P0-rHu" secondAttribute="top" constant="20" id="siU-sX-OpW"/>
                         </constraints>
                     </view>
                 </viewController>
